Fix chat history overflow

--- a/src/components/chat/style.module.css
+++ b/src/components/chat/style.module.css
@@ -1,20 +1,28 @@
 .layout {
   display: grid;
   gap: 0.25rem;
-  grid-template: auto 6rem / auto;
+  grid-template: 1fr 6rem / auto;
   height: 100%;
 }
 
 .history {
   background-color: #111;
-  padding: 0.75rem;
   overflow-y: scroll;
+  padding: 0.75rem;
+}
+
+.history ul {
+  max-height: 0;
+  line-height: 1.25;
+}
+
+.history li + li {
+  margin-top: 0.5rem;
 }
 
 .textarea {
   background-color: #111;
   display: block;
-  height: 100%;
   padding: 0.75rem;
   width: 100%;
 }
